Fixed letter text alignment and image size

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
     position: absolute;
     background-color: #eae2b7;
     width: 320px;  
-    height: 200px;  
+    height: 300px;  
     padding: 20px;
     top: 5px;
     left: 15px;
